# config/packages/nelmio_api_doc.yaml
@@ -80,6 +80,19 @@ nelmio_api_doc:
                         cost:
                             type: float
                             description: 'Coût de la réparation'
+                Sale:
+                    type: object
+                    properties:
+                        id:
+                            type: interger
+                            description: 'ID de la vente'
+                        saleDate:
+                            type: string
+                            format: date-time
+                            description: 'Date de la vente'
+                        salePrice:
+                            type: float
+                            description: 'Prix de la vente'
                         
     
     areas:
